--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 server.port=8083
 server.servlet.context-path=/
+
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=TimTeam;
+spring.datasource.driver.class=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
